<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory
        android:key="@string/key_text_preference_group"
        android:title="@string/titles_labels">

        <EditTextPreference
            android:key="@string/key_dialog_title"
            android:defaultValue="@string/choose"
            android:summary="@string/provide_text"
            android:title="@string/dialog_title"/>

        <EditTextPreference
            android:key="@string/key_progress_text"
            android:defaultValue="@string/loading"
            android:summary="@string/provide_text"
            android:title="@string/progress_text"/>

        <EditTextPreference
            android:key="@string/key_cancel_text"
            android:defaultValue="@string/cancel"
            android:summary="@string/provide_text"
            android:title="@string/cancel_text"/>

        <EditTextPreference
            android:key="@string/key_camera_button_text"
            android:defaultValue="@string/camera"
            android:summary="@string/provide_text"
            android:title="@string/camera_button_text"/>

        <EditTextPreference
            android:key="@string/key_gallery_button_text"
            android:defaultValue="@string/gallery"
            android:summary="@string/provide_text"
            android:title="@string/gallery_button_text"/>

    </PreferenceCategory>


    <PreferenceCategory android:title="@string/colors">

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@android:color/white"
            android:key="@string/key_background_color"
            android:title="@string/background_color" />

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="@string/key_title_color"
            android:title="@string/title_color" />

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="@string/key_button_text_color"
            android:title="@string/button_text_color" />

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="@string/key_cancel_text_color"
            android:title="@string/cancel_text_color" />

        <com.jrummyapps.android.colorpicker.ColorPreference
            android:defaultValue="@color/primaryText"
            android:key="@string/key_progress_text_color"
            android:title="@string/progress_text_color" />

    </PreferenceCategory>


    <PreferenceCategory
        android:key="@string/key_additional_preference_group"
        android:title="@string/additional_customization">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_flip_image"
            android:title="@string/flip_image" />


        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/key_colored_icons"
            android:title="@string/colored_icons" />

        <EditTextPreference
            android:defaultValue="300"
            android:key="@string/key_image_size"
            android:numeric="integer"
            android:title="@string/image_size" />

        <EditTextPreference
            android:defaultValue="0.3"
            android:key="@string/key_dim_amount"
            android:numeric="decimal"
            android:title="@string/dim_amount" />


        <ListPreference
            android:title="@string/buttons_available"
            android:key="@string/key_buttons_available"
            android:defaultValue="2"
            android:entries="@array/pick_types_labels"
            android:entryValues="@array/pick_types_values" />

        <ListPreference
            android:title="@string/icon_gravity"
            android:key="@string/key_icon_gravity"
            android:defaultValue="3"
            android:entries="@array/gravity_labels"
            android:entryValues="@array/gravity_values" />

        <ListPreference
            android:title="@string/buttons_orientation"
            android:key="@string/key_buttons_orientation"
            android:defaultValue="0"
            android:entries="@array/orientation_labels"
            android:entryValues="@array/orientation_values" />

    </PreferenceCategory>
</PreferenceScreen>